Add default sorting for home page